--- a/refinement/urbansim_refine_input.ipynb
+++ b/refinement/urbansim_refine_input.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,17 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# first test using city as target and sample units\n",
-    "# use oakland as test region"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,28 +89,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# three sampling strategies:\n",
-    "# 1. \"LARGEST\": sampling from largest linked area (default)\n",
-    "# 2. \"OVERLAP\": sampling from largest and the overlapped proportions\n",
-    "# 3. \"ALL\" = sample from all areas overalapping target area \n",
-    "sampling_strategy = 'ALL'  \n",
+    "# 1. \"LARGEST\": sampling from largest single area (default)\n",
+    "# 2. \"OVERLAP\": sampling from largest area and other overlapped area proportions (determinted by HUs and HHs)\n",
+    "# 3. \"ALL\": sampling from all areas fully or partially overalapping target area \n",
+    "sampling_method = 'ALL'  \n",
     "\n",
     "target_geo = 'TAZ'\n",
     "sample_geo = 'CITY'\n",
+    "if target_geo == sample_geo:\n",
+    "    sampling_method = 'LARGEST' # overwrite sampling method\n",
+    "\n",
     "year = '2045'\n",
     "geo_units = ['COUNTY', 'CITY','TAZ', 'TRACTID', 'BLKGRPID', 'REGION']\n",
     "weight = 'residential_units'\n",
     "prj_name = 'refine'\n",
-    "new_id_base = 2 * 10 ** 10\n",
+    "new_id_base = 2 * 10 ** 10 # to add to original id and make sure no potential duplicates in geo, hh or person ids.\n",
     "\n",
     "hdf_in = 'run4032_45.h5'\n",
-    "hdf_target = 'run4032_taz_draft_ypsi.h5'\n",
-    ""
+    "hdf_target = 'run4032_taz_draft_ypsi.h5'\n"
    ]
   },
   {
@@ -138,28 +130,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# first test using city as target and sample units\n",
+    "# use oakland as test region"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "sampling_method: ALL\ngeo_cross_walk:  refine_geo_cross_walk.csv\ngeocross: 723    geocross_all: 754\n"
+    }
+   ],
+   "source": [
     "st= pd.HDFStore(hdf_in, 'r')\n",
     "\n",
     "dfgeo = building_geos(st, year, weight)\n",
-    "dfgeo = dfgeo.loc[dfgeo.COUNTY == 125] #sele t Oakland for now\n",
-    "\n",
+    "dfgeo = dfgeo.loc[dfgeo.COUNTY == 125] #select Oakland for now\n",
     "dfgeo_grpby = dfgeo.groupby([target_geo, sample_geo])[weight].sum().to_frame(weight).reset_index()\n",
     "\n",
-    "geocross_all = dfgeo_grpby.sort_values(by=[target_geo, weight], ascending = False)\n",
+    "geocross_all = dfgeo_grpby.sort_values(by=[target_geo, weight], ascending = False) #sort by the proportion of overlaps\n",
     "geocross = geocross_all.drop_duplicates(target_geo)\n",
     "geocross['SAMPLEGEO'] = geocross[sample_geo]\n",
-    "\n",
-    "if sampling_strategy != 'LARGEST':\n",
-    "    dup_geo = geocross_all.loc[geocross_all.duplicated(target_geo)][target_geo].unique()\n",
-    "    geocross_dup = geocross_all.loc[geocross_all[target_geo].isin(dup_geo)]\n",
+    "#if sampling method is not on single area, then set 'SAMPLEGEO' to target area id plus new_id_base \n",
+    "if sampling_method != 'LARGEST':\n",
+    "    geocross_dup = geocross_all.loc[geocross_all.duplicated(target_geo,keep = False)]\n",
     "    geocross.loc[geocross[target_geo].isin(geocross_dup[target_geo].unique()), 'SAMPLEGEO'] = geocross[target_geo] + new_id_base\n",
-    "\n",
-    "print('sampling_strategy:', sampling_strategy)\n",
-    "\n",
     "geocross['REGION'] = 2\n",
     "geocross = geocross.astype('int64')\n",
     "\n",
     "geocross.to_csv(prj_name + '_geo_cross_walk.csv')\n",
+    "\n",
+    "print('sampling_method:', sampling_method)\n",
     "print('geo_cross_walk: ', prj_name + '_geo_cross_walk.csv')\n",
     "print('geocross:', len(geocross), '   geocross_all:', len(geocross_all))"
    ]
@@ -182,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "stc= pd.HDFStore(hdf_target, 'r')\n",
     "ctotals = stc['/base/annual_household_control_totals']\n",
     "\n",
-    "#convert single column 'race_id' to race_id_min and max columns\n",
+    "#convert single value column 'race_id' to 'race_id_min' and 'race_id_min' columns\n",
     "ctotals['race_id_min'] = ctotals['race_id']\n",
     "ctotals['race_id_max'] = ctotals['race_id']\n",
     "\n",
@@ -242,9 +247,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "config control table:  refine_controls.csv\n"
+    }
+   ],
    "source": [
     "# build config control table using annual_household_control_totals\n",
     "seed_tbl = 'households'\n",
@@ -257,9 +268,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "config control table:  refine_controls.csv\n"
+    }
+   ],
    "source": [
     "# (optional, only when person controls are desired)\n",
     "# add person controls to config controls \n",
@@ -287,25 +304,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "#special case: already have target database\n",
     "#prepare households and persons tables for summarization purpose(refined/official results)\n",
-    "\n",
     "bldg_geos = building_geos(stc, year)\n",
     "\n",
     "households = pd.merge(stc[year + '/households'], bldg_geos[geo_units], \n",
     "                                        left_on='building_id', right_index= True, how='left' )\n",
     "households = households.loc[households.COUNTY == 125]\n",
-    "# households['PUMA'] = households['CITY']\n",
     "households.dropna(axis=0, inplace=True)\n",
-    "households = households.astype(int)\n",
+    "households = households.astype('int64')\n",
     "\n",
     "persons = pd.merge(stc[year + '/persons'], households[geo_units], \n",
     "                                        left_on='household_id', right_index= True, how='left' )\n",
-    "# persons['PUMA'] = persons['CITY']\n",
     "persons.dropna(axis=0, inplace=True)\n",
     "persons = persons.astype('int64')\n",
     ""
@@ -313,9 +327,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "geography control table:  refine_control_totals_taz.csv\n"
+    }
+   ],
    "source": [
     "#summarize target HH distribution based on config_controls\n",
     "#single geo level for now\n",
@@ -323,10 +343,10 @@
     "for ind, r in simctrl.iterrows():\n",
     "    sr = pd.eval('{}.loc[{}]'.format(r.seed_table, r.expression)).groupby([r.geography]).size()\n",
     "    sr.name = r.control_field\n",
-    "    if 'sumt' in locals() or 'sumt' in globals():\n",
-    "        sumt = pd.concat([sumt, sr], axis=1)\n",
-    "    else:\n",
+    "    if ind == 1:\n",
     "        sumt = sr\n",
+    "    else:\n",
+    "        sumt = pd.concat([sumt, sr], axis=1)\n",
     "\n",
     "geo_ctrl = pd.DataFrame(sumt)\n",
     "geo_ctrl.index.name = target_geo\n",
@@ -349,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,24 +377,29 @@
     "bldg_geos = building_geos(st, year)\n",
     "\n",
     "hhs_total = pd.merge(st[year + '/households'], bldg_geos[geo_units], \n",
-    "                        left_on='building_id', right_index= True,how='left') \n",
+    "                                    left_on='building_id', right_index= True,how='left') \n",
     "pps_total = pd.merge(st[year + '/persons'], hhs_total[geo_units], \n",
-    "                            left_on='household_id', right_index=True, how='left')"
+    "                                    left_on='household_id', right_index=True, how='left')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "sampling_method ALL\n"
+    }
+   ],
    "source": [
     "# sample data for sample_geos\n",
-    "print ('sampling_strategy', sampling_strategy)\n",
+    "print ('sampling_method', sampling_method)\n",
     "\n",
     "def sample_largest(df_total, geocross, sample_geo):\n",
     "    dfs = df_total.loc[df_total[sample_geo].isin(geocross[sample_geo].unique())]\n",
     "    dfs['SAMPLEGEO'] = dfs[sample_geo]                      \n",
-    "\n",
     "    return dfs.astype('int64')\n",
     "\n",
     "geocross = geocross.loc[geocross['SAMPLEGEO'] <= new_id_base]\n",
@@ -384,7 +409,7 @@
     "pps = sample_largest(pps_total, geocross, sample_geo)\n",
     "pps['PWGTP'] = 1\n",
     "\n",
-    "if sampling_strategy == 'LARGEST':\n",
+    "if sampling_method == 'LARGEST':\n",
     "    hhs.to_csv(prj_name + '_seed_households.csv')\n",
     "    print('seed households table: ', prj_name + '_seed_households.csv')\n",
     "    pps.to_csv(prj_name + '_seed_persons.csv')\n",
@@ -400,19 +425,17 @@
    "outputs": [],
    "source": [
     "# if sampling from all overlapping area\n",
-    "if sampling_strategy != 'LARGEST':\n",
-    "    hhlst = []\n",
-    "    hhind = new_id_base\n",
-    "    pplst = []\n",
-    "    ppind = new_id_base\n",
+    "if sampling_method != 'LARGEST':\n",
+    "    hhlst = pplst = []\n",
+    "    hhind = ppind = new_id_base\n",
     "\n",
     "    for geo, dfg in geocross_dup.groupby(target_geo):  \n",
-    "        if sampling_strategy == 'OVERLAP':\n",
+    "        if sampling_method == 'OVERLAP':\n",
     "            hh_lc = pd.concat( [hhs_total.loc[hhs_total[sample_geo] == dfg[sample_geo].values[0]], \n",
     "                                hhs_total.loc[(hhs_total[sample_geo].isin(dfg[sample_geo].values[1:])) & \n",
     "                                                (hhs_total[target_geo] == geo)]\n",
     "                                ] )\n",
-    "        elif sampling_strategy == 'ALL':\n",
+    "        elif sampling_method == 'ALL':\n",
     "            hh_lc = hhs_total.loc[hhs_total[sample_geo].isin(dfg[sample_geo].values)]\n",
     "        \n",
     "        hh_lc['SAMPLEGEO'] = geo + new_id_base \n",
