remove invalid zone_id from GQ

--- a/urbansim_to_abm/urbansim_to_abm_inputs.ipynb
+++ b/urbansim_to_abm/urbansim_to_abm_inputs.ipynb
@@ -16,13 +16,13 @@
     "\n",
     "# 04-22-2020\n",
     "# fix member id: no duplicates in same HH\n",
-    "# document: provide detailed data dictionary\n",
+    "# zone_id: remove invalid zone_id \n",
     "# household id: consider shorter int number(in the future)\n",
     "# NAs: Set all NAs to -9\n",
     "# HHT: for GQ records is set to 0\n",
     "# HINCP: Use PINCP (personal income) for GQ records instead of  (household income). \n",
     "# HINCP adjustment: this dataset uses original HINCP and PINCP from PUMS, so not adjustment was implemented. The \"income\" variable in official 2015 model base year was adjusted. \n",
-    " \n"
+    "# document: provide detailed data dictionary\n"
    ]
   },
   {
@@ -344,6 +344,7 @@
    "source": [
     "#join county and PUMA to GQ pop\n",
     "modgq = pd.merge(stm['/group_quarters'], bldgeos, left_on = 'building_id', right_index=True, how='left')\n",
+    "modgq = modgq.loc[modgq.zone_id.notnull()] # some SEMCOG GQ buildings have no valid zone_id/parcel_id\n",
     "print(modgq.head(2))"
    ]
   },
@@ -506,7 +507,7 @@
    "outputs": [],
    "source": [
     "# select needed variables for final outputs\n",
-    "hset = list(set(stm['households'].columns) - set(['income', 'workers'])) + newhh_vars\n",
+    "hset = list(set(stm['households'].columns) - set(['income', 'workers'])) + newhh_vars + ['zone_id']\n",
     "pset = list(set(stm['persons'].columns) - set(['worker'])) + newperson_vars\n",
     "\n",
     "#final households and persons \n",
