postprocess add NAICSP to 18 sector conversion

--- a/notebooks/popsim_postprocess.ipynb
+++ b/notebooks/popsim_postprocess.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,17 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "household_id\nIndex(['puma', 'tract', 'blkgrp', 'hh_id', 'persons', 'cars', 'hincp', 'r18',\n       'age_of_head', 'race_id', 'hhisp', 'hworkers', 'adjinc', 'children',\n       'type', 'ybl', 'bld', 'valp', 'rent', 'adjhsg', 'ten', 'hht'],\n      dtype='object')\nNone\nIndex(['puma', 'tract', 'blkgrp', 'hh_id', 'household_id', 'member_id', 'age',\n       'sex', 'esr', 'race_id', 'relate', 'hisp', 'naicsp', 'industry', 'wkhp',\n       'wkw', 'schg', 'mil', 'pincp'],\n      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(dfh.index.name)\n",
     "print(dfh.columns)\n",
@@ -76,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,12 +140,56 @@
     "\n",
     "#person race_id, same as HH race_id\n",
     "dfp.loc[dfp.race_id > 2, 'race_id'] = 4\n",
-    "dfp.loc[dfp.hisp > 1, 'race_id'] = 3"
+    "dfp.loc[dfp.hisp > 1, 'race_id'] = 3\n",
+    "\n",
+    "#\n",
+    "# recode NAICSP to industry\n",
+    "    # https://www2.census.gov/programs-surveys/acs/tech_docs/code_lists/2018_ACS_Code_Lists.pdf\n",
+    "    # summary table example https://www.socialexplorer.com/data/ACS2017_5yr/metadata/?ds=ACS17_5yr&table=B08126\n",
+    "naics_18ind = {\n",
+    "        \"11\": 1,\n",
+    "        \"21\": 1,\n",
+    "        \"23\": 2,\n",
+    "        \"31\": 3,\n",
+    "        \"32\": 3,\n",
+    "        \"33\": 3,\n",
+    "        \"3M\": 3,\n",
+    "        \"42\": 4,\n",
+    "        \"44\": 5,\n",
+    "        \"45\": 5,\n",
+    "        \"4M\": 5,\n",
+    "        \"48\": 6,\n",
+    "        \"49\": 6,\n",
+    "        \"22\": 7,\n",
+    "        \"51\": 8,\n",
+    "        \"52\": 9,\n",
+    "        \"53\": 9,\n",
+    "        \"54\": 10,\n",
+    "        \"55\": 11,\n",
+    "        \"56\": 12,\n",
+    "        \"61\": 13,\n",
+    "        \"6S\": 14, #['621', '623', '624'] -> '6S'\n",
+    "        \"62\": 15, # <- '622'\n",
+    "        \"71\": 16,\n",
+    "        \"72\": 16,\n",
+    "        \"81\": 17,\n",
+    "        \"92\": 18,\n",
+    "        \"99\": 0\n",
+    "}\n",
+    "dfp[\"industry\"] = dfp.naicsp.str[:3]\n",
+    "dfp.industry.replace(['621', '623', '624'], '6S', inplace=True)\n",
+    "dfp.industry = dfp.industry.str[:2]\n",
+    "dfp.industry.replace(naics_18ind, inplace=True)\n",
+    "dfp.loc[dfp.naicsp.isnull(), \"industry\"] = 0\n",
+    "#dfp.industry = dfp.industry.astype(int)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +200,7 @@
     "\n",
     "dfp[['county', 'tract', 'blkgrp', 'household_id', 'member_id', 'age',\n",
     "       'sex', 'race_id', 'relate', 'naicsp', 'industry', 'wkhp',\n",
-    "       'wkw', 'schg', 'mil', 'pincp']].to_csv(outfolder + 'synthetic_persons_processed.csv')"
+    "       'wkw', 'schg', 'mil', 'pincp', 'naicsp', 'industry']].to_csv(outfolder + 'synthetic_persons_processed.csv')"
    ]
   },
   {
